--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,10 @@
     <color name="icons" >#5d5e5f</color>
     <color name="background">#e8eaed</color>
 
+    <color name="key_top">#ece0d0</color>
+    <color name="key_base">#d9bd96</color>
+    <color name="label">#d9bd96</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
