--- a/app/src/main/res/drawable/key_background.xml
+++ b/app/src/main/res/drawable/key_background.xml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Default -->
-    <item android:state_pressed="false">
-        <inset android:insetBottom="10dp" android:insetLeft="3dp" android:insetRight="3dp">
-            <shape android:shape="rectangle">
-                <solid android:color="#FFFFFFFF" /> <!-- Your normal key color -->
-                <corners android:radius="8dp" />
-            </shape>
-        </inset>
-    </item>
-
     <!-- Pressed -->
     <item android:state_pressed="true">
-        <inset android:insetBottom="10dp" android:insetLeft="3dp" android:insetRight="3dp">
+        <inset android:insetBottom="10dp" android:insetTop="2dp" android:insetLeft="3dp" android:insetRight="3dp">
             <shape android:shape="rectangle">
-                <solid android:color="#FFEEEEEE" /> <!-- Darker color when pressed -->
+                <solid android:color="@color/key_top" />
                 <corners android:radius="8dp" />
             </shape>
         </inset>
@@ -23,11 +13,53 @@
     <!-- Focused -->
     <item android:state_focused="true">
         <inset android:insetBottom="10dp" android:insetLeft="3dp" android:insetRight="3dp">
-            <shape android:shape="rectangle">
-                <solid android:color="#FFDDDDDD" /> <!-- Slightly different color when focused -->
-                <corners android:radius="8dp" />
-                <stroke android:width="1dp" android:color="#FF0000FF" />
-            </shape>
+            <layer-list>
+
+                <item>
+                    <shape android:shape="rectangle">
+                        <solid android:color="@color/key_base" />
+                        <corners android:radius="8dp" />
+                    </shape>
+                </item>
+
+                <item
+                    android:left="0dp"
+                    android:top="0dp"
+                    android:right="0dp"
+                    android:bottom="2dp">
+                    <shape android:layout_width="wrap_content" android:layout_height="wrap_content" android:shape="rectangle">
+                        <solid android:color="@color/key_top" />
+                        <corners android:radius="8dp" />
+                        <stroke android:width="4dp" android:color="#7ee988" />
+                    </shape>
+                </item>
+            </layer-list>
+        </inset>
+    </item>
+
+    <!-- Default -->
+    <item>
+        <inset android:insetBottom="10dp" android:insetLeft="3dp" android:insetRight="3dp">
+            <layer-list>
+
+                <item>
+                    <shape android:shape="rectangle">
+                        <solid android:color="@color/key_base" />
+                        <corners android:radius="8dp" />
+                    </shape>
+                </item>
+
+                <item
+                    android:left="0dp"
+                    android:top="0dp"
+                    android:right="0dp"
+                    android:bottom="2dp">
+                    <shape android:shape="rectangle">
+                        <solid android:color="@color/key_top" />
+                        <corners android:radius="8dp" />
+                    </shape>
+                </item>
+            </layer-list>
         </inset>
     </item>
 </selector>
