--- a/app/src/main/res/xml/keys_azerty.xml
+++ b/app/src/main/res/xml/keys_azerty.xml
@@ -45,7 +45,7 @@
     <Row android:rowEdgeFlags="bottom">
         <Key android:codes="-2" android:keyLabel="123" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
         <Key android:codes="-3" android:keyIcon="@android:drawable/ic_menu_search" android:keyWidth="10%p"/>
-        <Key android:codes="32" android:keyIcon="@drawable/ic_input_space" android:keyWidth="50%p" android:isRepeatable="true"/>
+        <Key android:codes="32" android:keyIcon="@drawable/ic_space" android:keyWidth="50%p" android:isRepeatable="true"/>
         <Key android:codes="46" android:keyLabel="." android:keyWidth="10%p" />
         <Key android:codes="10" android:keyIcon="@android:drawable/ic_media_play" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
