--- a/app/src/main/res/xml/keys_qwerty.xml
+++ b/app/src/main/res/xml/keys_qwerty.xml
@@ -31,7 +31,7 @@
     </Row>
 
     <Row>
-        <Key android:codes="-1" android:keyIcon="@drawable/ic_keyboard_caps" android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" android:keyEdgeFlags="left"/>
+        <Key android:codes="-1" android:keyIcon="@drawable/ic_capslock" android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" android:keyEdgeFlags="left"/>
         <Key android:codes="122" android:keyLabel="z"/>
         <Key android:codes="120" android:keyLabel="x"/>
         <Key android:codes="99" android:keyLabel="c"/>
@@ -43,9 +43,9 @@
     </Row>
 
     <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-2" android:keyLabel="123" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
+        <Key android:codes="-2" android:keyIcon="@drawable/numbers" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
         <Key android:codes="55" android:keyLabel="," android:keyWidth="10%p"/>
-        <Key android:codes="32" android:keyIcon="@drawable/ic_input_space" android:keyWidth="50%p" android:isRepeatable="true"/>
+        <Key android:codes="32" android:keyIcon="@drawable/ic_space" android:keyWidth="50%p" android:isRepeatable="true"/>
         <Key android:codes="46" android:keyLabel="." android:keyWidth="10%p" />
         <Key android:codes="10" android:keyIcon="@drawable/ic_return" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
