--- a/app/src/main/res/drawable/ic_transform.xml
+++ b/app/src/main/res/drawable/ic_transform.xml
@@ -1,5 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="32dp" android:viewportHeight="24" android:viewportWidth="24" android:width="32dp">
-      
-    <path android:fillColor="@color/icons" android:pathData="M9.21,19L11,19v3c0,0.55 0.45,1 1,1s1,-0.45 1,-1v-3h1.79c0.45,0 0.67,-0.54 0.35,-0.85l-2.79,-2.79c-0.2,-0.2 -0.51,-0.2 -0.71,0l-2.79,2.79c-0.31,0.31 -0.09,0.85 0.36,0.85zM14.79,5L13,5L13,2c0,-0.55 -0.45,-1 -1,-1s-1,0.45 -1,1v3L9.21,5c-0.45,0 -0.67,0.54 -0.36,0.85l2.79,2.79c0.2,0.2 0.51,0.2 0.71,0l2.79,-2.79c0.32,-0.31 0.1,-0.85 -0.35,-0.85zM4,12c0,0.55 0.45,1 1,1h14c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1L5,11c-0.55,0 -1,0.45 -1,1z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M1,4a3,3 0,0 1,5.83 -1h10.34A3.001,3.001 0,1 1,21 6.83v10.34A3.001,3.001 0,1 1,17.17 21H6.83A3.001,3.001 0,1 1,3 17.17V6.83A3,3 0,0 1,1 4m4,2.83v10.34A3,3 0,0 1,6.83 19h10.34A3,3 0,0 1,19 17.17V6.83A3,3 0,0 1,17.17 5H6.83A3,3 0,0 1,5 6.83"
+      android:strokeWidth="0.5"
+      android:fillColor="#000"
+      android:strokeColor="#000"/>
 </vector>
