--- a/app/src/main/res/xml/method.xml
+++ b/app/src/main/res/xml/method.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <input-method xmlns:android="http://schemas.android.com/apk/res/android"
-    android:settingsActivity="your.package.name.SettingsActivity">
+    android:settingsActivity="your.package.name.SettingsActivity"
+    android:isDefault="true">
     <subtype
         android:label="@string/ime_name"
         android:imeSubtypeLocale="en_US"
         android:imeSubtypeMode="keyboard"
-        android:icon="@drawable/ic_keyboard" />
+        android:imeOptions="flagNoExtractUi|flagNoFullscreen" />
 </input-method>
