--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,15 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="96dp" android:viewportHeight="64" android:viewportWidth="64" android:width="96dp">
+      
+    <path android:fillColor="#FFECE0D0" android:pathData="M31.999,30.452m-15.621,0a15.621,15.621 0,1 1,31.242 0a15.621,15.621 0,1 1,-31.242 0" android:strokeLineCap="round" android:strokeLineJoin="round"/>
+      
+    <path android:fillColor="#FFECE0D0" android:pathData="M47.494,39.746a15.493,8.427 0,0 1,-7.747 7.298,15.493 8.427,0 0,1 -15.493,0 15.493,8.427 0,0 1,-7.747 -7.298" android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="1.01386"/>
+      
+    <path android:fillColor="#FFECE0D0" android:pathData="M13.63,32.433c-1.716,1.004 -2.5,2.994 -1.267,5.663 1.204,2.459 4.525,2.51 6.89,2.932 1.957,0.35 1.26,-4.848 0.101,-6.828 -1.159,-1.98 -4.008,-2.771 -5.724,-1.767zM50.371,32.433c1.716,1.004 2.5,2.994 1.268,5.663 -1.204,2.459 -4.526,2.51 -6.89,2.932 -1.957,0.35 -1.26,-4.848 -0.101,-6.828 1.158,-1.98 4.008,-2.771 5.723,-1.767z" android:strokeLineCap="round" android:strokeLineJoin="round"/>
+      
+    <path android:fillColor="#FFB49162" android:pathData="M27.969,33.49c0,1.254 -1.044,2.27 -2.334,2.27 -1.289,0 -2.334,-1.016 -2.334,-2.27 0,-1.253 1.045,-2.27 2.334,-2.27 1.29,0 2.335,1.017 2.335,2.27zM36.032,33.49c0,1.254 1.045,2.27 2.334,2.27 1.29,0 2.334,-1.016 2.334,-2.27 0,-1.253 -1.045,-2.27 -2.334,-2.27 -1.289,0 -2.334,1.017 -2.334,2.27z" android:strokeLineCap="round" android:strokeLineJoin="round"/>
+      
+    <path android:strokeColor="#FFB49162" android:pathData="M35.856,39.319A3.991,3.732 0,0 1,32 42.085a3.991,3.732 0,0 1,-3.855 -2.766" android:fillColor="#00000000" android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="1.8"/>
+      
+    <path android:fillColor="#FFB49162" android:pathData="m31.995,14.831 l0.002,11.993 -3.926,-3.296 -3.307,3.045 -3.03,-2.58s-2.842,1.786 -3.423,9.1l-2.769,-0.975S14.615,14.832 31.995,14.832zM31.999,14.831 L31.997,26.824 35.923,23.528 39.23,26.573 42.26,23.993s2.841,1.786 3.423,9.1l2.768,-0.975S49.379,14.832 31.999,14.832z" android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="1.09415"/>
+    
 </vector>
