--- a/app/src/main/res/drawable/ic_elipsis.xml
+++ b/app/src/main/res/drawable/ic_elipsis.xml
@@ -1,5 +1,27 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="#000" android:fillType="evenOdd" android:pathData="M18,14a2,2 0,1 1,0 -4a2,2 0,0 1,0 4M6,14a2,2 0,1 1,0 -4a2,2 0,0 1,0 4m6,0a2,2 0,1 1,0 -4a2,2 0,0 1,0 4" android:strokeColor="#000" android:strokeWidth="1"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,12m-2.25,0a2.25,2.25 0,1 1,4.5 0a2.25,2.25 0,1 1,-4.5 0"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2.625"
+      android:fillColor="#000000"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M4.5,12m-2.25,0a2.25,2.25 0,1 1,4.5 0a2.25,2.25 0,1 1,-4.5 0"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2.625"
+      android:fillColor="#000000"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M19.5,12m-2.25,0a2.25,2.25 0,1 1,4.5 0a2.25,2.25 0,1 1,-4.5 0"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2.625"
+      android:fillColor="#000000"
+      android:strokeColor="#00000000"
+      android:strokeLineCap="round"/>
 </vector>
