moved UI controls

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="icon.dark">#D2D1D9</color>
     <color name="icon.cream">#D9BD96</color>
     <color name="icon.chocolate">#F0D9B0</color>
-    <color name="icon.cherry">#FDB4D4</color>
+    <color name="icon.cherry">#FCA3C9</color>
 
 </resources>
